fixed AJAX request to replace the truncated content with the full body, fixed welcome background-image

--- a/kalmykprojet/app/assets/stylesheets/application.css
+++ b/kalmykprojet/app/assets/stylesheets/application.css
@@ -19,8 +19,16 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  /*background-image: url("kalm.jpg")*/
+
 }
 
+body#welcome { 
+  /*background: url(https://www.poehalisnami.ua/Site/ContentData/Img/%D0%91%D1%83%D0%B4%D0%B4%D0%B0.jpg) no-repeat center center fixed; */
+
+  background-image: url("kalm.jpg")
+
+}
 .panel-default {
 opacity: 0.9;
 margin-top:30px;
